refact: 센서 다중 조회 id컬럼 삭제 및 서비스 로직에서 하나가 검색이되면 나머지는 무시되는 문제 해결